--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="container"></div>
-    <script src="/static/bundle.js"></script>
+    <script src="/static/dev_bundle.js"></script>
 </body>
 </html>
